--- a/styles/style.css
+++ b/styles/style.css
@@ -16,6 +16,9 @@ img {
   width: 100%;
   border-radius: 2px;
 }
+section {
+  padding-block: 4rem;
+}
 body {
   margin: 0;
 }
@@ -37,6 +40,7 @@ header {
 header p {
   font-weight: bold;
   font-size: 20px;
+  font-weight: bolder;
 }
 .header-right {
   display: flex;
@@ -61,11 +65,10 @@ header p {
 .nav-sm {
   width: 0%;
   height: 100vh;
-  background-color: gainsboro;
+  background-color: var(--background-color);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  padding-block: 10rem;
+  padding-block: 8rem;
   position: fixed;
   top: 0;
   right: 0;
@@ -81,6 +84,18 @@ header p {
 .nav-sm .cls-btn:hover {
   color: #e74c3c;
 }
+.nav-sm a {
+  color: #2c3e50;
+  display: block;
+  text-align: center;
+  text-decoration: none;
+  padding-block: 1rem;
+}
+.nav-sm a:hover {
+  background-color: gainsboro;
+  padding-block: 1rem;
+}
+
 /**************main>intro*********************/
 .intro {
   height: 100vh;
@@ -92,15 +107,15 @@ header p {
   justify-content: center;
   overflow: hidden;
 }
-.intro img {
-}
+
 .intro div:nth-child(2) h1 {
   display: none;
 }
-.intro .shop-btn {
+.intro .shop-btn,
+.ad .shop-btn {
   display: block;
   width: fit-content;
-  background-color: #2ecc71;
+  background-color: green;
   color: white;
   text-decoration: none;
   padding: 10px 15px;
@@ -109,7 +124,7 @@ header p {
   border-radius: 5px;
 }
 .intro .shop-btn:hover {
-  background-color: var(--accent-color);
+  background-color: darkorange;
 }
 .intro h1 {
   font-family: "Merriweather", serif;
@@ -129,6 +144,119 @@ header p {
   color: var(--text-color);
   font-size: 14px;
 }
+/*******ad**************/
+.ad > div:nth-child(1) {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: black;
+  color: white;
+  padding: 1rem;
+  padding-bottom: 2rem;
+}
+
+.ad .shop-btn {
+  display: block;
+  width: fit-content;
+  background-color: green;
+  color: white;
+  text-decoration: none;
+  padding: 8px 15px;
+  margin-top: 0;
+  border: none;
+  border-radius: 5px;
+}
+.ad .shop-btn:hover {
+  background-color: darkorange;
+}
+.ad > div:nth-child(1) p {
+  font-weight: bolder;
+  font-family: "Merriweather", serif;
+  font-size: 18px;
+  text-align: center;
+}
+.ad div:nth-child(2) p {
+  text-align: center;
+  padding: 2rem;
+  background-color: gainsboro;
+  margin: 0;
+  font-weight: bold;
+  font-family: "Merriweather", serif;
+}
+/************products***************/
+
+.products h2 {
+  text-align: center;
+  font-family: "Merriweather", serif;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.products-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  padding: 2rem;
+  gap: 10px;
+}
+.products-grid > div {
+  border: 1px solid gainsboro;
+  border-radius: 5px;
+  background-color: var(--background-color);
+}
+.products-grid > div:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border: none;
+}
+.products-grid > div > div:nth-child(2) {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--background-color);
+  padding-inline: 2rem;
+  padding-block: 1rem;
+}
+.products-grid > div > div:nth-child(1) {
+  text-align: center;
+  padding: 1rem;
+  background-color: white;
+}
+.products-grid > div > div:nth-child(2) > h3 {
+  margin: 0;
+}
+
+.products-grid img {
+  max-width: 150px;
+  height: 120px;
+}
+.products-grid > div > div:nth-child(2) > a {
+  background-color: #2ecc71;
+  text-align: center;
+  padding-block: 5px;
+  border-radius: 2px;
+  text-decoration: none;
+  color: white;
+}
+.products-grid > div > div:nth-child(2) > a:hover {
+  background-color: darkorange;
+}
+/******footer*********/
+footer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-block: 2rem;
+  background-color: black;
+  color: white;
+}
+footer p {
+  margin: 0;
+  margin-bottom: 0.5rem;
+}
+footer a {
+  color: white;
+  font-size: 18px;
+}
 
 /*******css for big screen***********/
 @media (min-width: 820px) {
@@ -136,12 +264,16 @@ header p {
   header {
     padding-inline: 2rem;
   }
+  header p {
+    font-size: 24px;
+  }
   .nav-sm {
     display: none;
   }
   .nav-lg {
     display: flex;
     gap: 20px;
+    align-items: center;
   }
   .nav-lg a {
     font-size: 16px;
@@ -179,7 +311,6 @@ header p {
   .intro .shop-btn {
     display: block;
     width: fit-content;
-    background-color: #2ecc71;
     color: white;
     text-decoration: none;
     padding: 15px 20px;
@@ -195,6 +326,46 @@ header p {
   }
   .quality-title-sm {
     display: none;
+  }
+  .intro p {
+    color: var(--text-color);
+    font-size: initial;
+  }
+  /************ad*********/
+  .ad > div:nth-child(1) {
+    padding-inline: 4rem;
+    padding-block: 2rem;
+    flex-direction: row;
+  }
+
+  .ad .shop-btn {
+    display: block;
+    width: fit-content;
+    background-color: green;
+    color: white;
+    text-decoration: none;
+    padding: 15px 30px;
+    margin-top: 0;
+    border: none;
+    border-radius: 5px;
+  }
+
+  .ad > div:nth-child(1) p {
+    text-align: left;
+    font-size: 30px;
+    width: 70%;
+  }
+  .ad div:nth-child(2) p {
+    font-size: 24px;
+  }
+  /******products*******/
+
+  .products-grid img {
+    max-width: 150px;
+    height: 150px;
+  }
+  .products h2 {
+    font-size: 30px;
   }
 }
 @media (min-width: 1200px) {
@@ -215,5 +386,18 @@ header p {
   }
   .intro .quality-title-lg {
     margin-bottom: -25px;
+  }
+  /******products*******/
+
+  .products-grid img {
+    max-width: 300px;
+    height: 220px;
+  }
+  .products-grid {
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 20px;
+  }
+  .products h2 {
+    font-size: 34px;
   }
 }
