--- a/styles/style.css
+++ b/styles/style.css
@@ -288,8 +288,8 @@ footer a {
   /****main>intro*******/
   .intro {
     flex-direction: row;
-    align-items: center;
     gap: 50px;
+    align-items: center;
   }
 
   .intro div:nth-child(2) h1 {
@@ -322,7 +322,6 @@ footer a {
     display: block;
     font-size: 20px;
     margin: none;
-    margin-bottom: -15px;
   }
   .quality-title-sm {
     display: none;
@@ -375,26 +374,38 @@ footer a {
   .nav-lg {
     margin-right: 100px;
   }
+  .intro {
+    flex-direction: row;
+    gap: 50px;
+    /* padding-block: 10rem; */
+    align-items: center;
+  }
   .intro h1 {
     font-size: 50px;
+    margin-block: 20px;
   }
   .intro img {
     max-width: 600px;
   }
   .intro div:nth-child(2) {
     width: 50%;
+    /* display: flex;
+   flex-direction: column;
+   justify-content:flex-start; */
   }
+
   .intro .quality-title-lg {
-    margin-bottom: -25px;
+    margin: 0;
   }
+
   /******products*******/
 
   .products-grid img {
     max-width: 300px;
-    height: 220px;
+    height: 180px;
   }
   .products-grid {
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 20px;
   }
   .products h2 {
