--- a/styles/style.css
+++ b/styles/style.css
@@ -144,6 +144,9 @@ header p {
   color: var(--text-color);
   font-size: 14px;
 }
+.intro img {
+  max-width: 200px;
+}
 /*******ad**************/
 .ad > div:nth-child(1) {
   display: flex;
@@ -295,9 +298,7 @@ footer a {
   .intro div:nth-child(2) h1 {
     display: block;
   }
-  .intro div:nth-child(2) {
-    width: 100%;
-  }
+
   .intro div:nth-child(1) h1 {
     display: none;
   }
@@ -329,6 +330,10 @@ footer a {
   .intro p {
     color: var(--text-color);
     font-size: initial;
+  }
+ 
+  .intro div:nth-child(2){
+    width: 50%;
   }
   /************ad*********/
   .ad > div:nth-child(1) {
@@ -386,12 +391,6 @@ footer a {
   }
   .intro img {
     max-width: 600px;
-  }
-  .intro div:nth-child(2) {
-    width: 50%;
-    /* display: flex;
-   flex-direction: column;
-   justify-content:flex-start; */
   }
 
   .intro .quality-title-lg {
