--- a/styles/style.css
+++ b/styles/style.css
@@ -102,14 +102,28 @@ header p {
   padding-inline: 2rem;
   padding-block: 2rem;
   /* background-color: var(--background-color); */
-  display: flex;
+  /* display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: center; */
+  display: grid;
+  grid-template-columns: 1fr;
+  align-items: center;
   overflow: hidden;
 }
 
 .intro div:nth-child(2) h1 {
   display: none;
+}
+.intro div:nth-child(2) {
+  align-self: self-start;
+}
+.intro div:nth-child(1) {
+  align-self: self-end;
+}
+.intro div:nth-child(1) img {
+  display: block;
+  margin: auto;
+  /* max-width: 300px; */
 }
 .intro .shop-btn,
 .ad .shop-btn {
@@ -144,9 +158,7 @@ header p {
   color: var(--text-color);
   font-size: 14px;
 }
-.intro img {
-  max-width: 200px;
-}
+
 /*******ad**************/
 .ad > div:nth-child(1) {
   display: flex;
@@ -290,9 +302,14 @@ footer a {
   }
   /****main>intro*******/
   .intro {
-    flex-direction: row;
+    /* flex-direction: row; */
     gap: 50px;
+    grid-template-columns: 1fr 1fr;
     align-items: center;
+  }
+  .intro div:nth-child(2),
+  .intro div:nth-child(1) {
+    align-self: center;
   }
 
   .intro div:nth-child(2) h1 {
@@ -331,9 +348,9 @@ footer a {
     color: var(--text-color);
     font-size: initial;
   }
-  .intro img {
+  /* .intro img {
     max-width: 100%;
-  }
+  } */
   /************ad*********/
   .ad > div:nth-child(1) {
     padding-inline: 4rem;
@@ -379,8 +396,8 @@ footer a {
     margin-right: 100px;
   }
   .intro {
-    flex-direction: row;
-    justify-content: flex-start;
+    /* flex-direction: row;
+    justify-content: flex-start; */
     align-items: center;
   }
   .intro h1 {
