--- a/styles/style.css
+++ b/styles/style.css
@@ -22,55 +22,7 @@ section {
 body {
   margin: 0;
 }
-/*========for subscribe section============*/
-#mc_embed_signup {
-  background: #fff;
-  font: 14px Helvetica, Arial, sans-serif;
-  width: 90%;
-  margin: auto;
-  margin-top: -2rem !important;
-  margin-bottom: 4rem !important;
-}
-.mc-field-group {
-  width: 100% !important;
-  flex: 1 1 400px !important;
-}
 
-.indicates-required {
-  margin-right: 0px !important;
-}
-#mc_embed_signup .mc-field-group input {
-  text-indent: 0.5rem !important;
-  height: 2rem !important;
-}
-.mc-field-group > .mce_inline_error {
-  margin: 0 !important;
-  padding: 0 !important;
-  padding-top: 5px !important;
-}
-.subscribe-grp {
-  display: flex !important;
-  flex-direction: row !important;
-  align-items: baseline;
-  column-gap: 1rem;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-#mce-responses {
-  padding: 0 !important;
-  margin: 0 !important;
-  margin-bottom: 1rem !important;
-}
-
-#mce-success-response {
-  padding: 0 !important;
-  margin: 0 !important;
-}
-#mc_embed_signup_scroll h2 {
-  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
-  border-bottom: 2px solid orange;
-  width: fit-content;
-}
 /*===========header*1*==========*/
 header {
   display: flex;
@@ -289,6 +241,60 @@ header p {
 }
 .products-grid > div > div:nth-child(2) > .buy-btn:hover {
   background-color: darkorange;
+}
+/*========for subscribe section============*/
+#mc_embed_signup {
+  background: #fff;
+  font: 14px Helvetica, Arial, sans-serif;
+  width: 90%;
+  margin: auto;
+  margin-top: -2rem !important;
+  margin-bottom: 4rem !important;
+}
+.mc-field-group {
+  width: 100% !important;
+  flex: 1 1 400px !important;
+}
+
+.indicates-required {
+  margin-right: 0px !important;
+}
+#mc_embed_signup .mc-field-group input {
+  text-indent: 0.5rem !important;
+  height: 2rem !important;
+}
+.mc-field-group > .mce_inline_error {
+  margin: 0 !important;
+  padding: 0 !important;
+  padding-top: 5px !important;
+}
+.subscribe-grp {
+  display: flex !important;
+  flex-direction: row !important;
+  align-items: baseline;
+  column-gap: 1rem;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+#mce-responses {
+  padding: 0 !important;
+  margin: 0 !important;
+  margin-bottom: 1rem !important;
+}
+
+#mce-success-response {
+  padding: 0 !important;
+  margin: 0 !important;
+}
+#mc_embed_signup_scroll h2 {
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  border-bottom: 2px solid orange;
+  width: fit-content;
+}
+#mc_embed_signup_scroll h2 .first-word {
+  font-size: 24px;
+  font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
+  color: orange;
 }
 
 /*======footer*1*=========*/
