--- a/styles/style.css
+++ b/styles/style.css
@@ -268,6 +268,9 @@ header p {
   padding: 0 !important;
   padding-top: 5px !important;
 }
+.email-grp {
+  flex: 1 1 100% !important;
+}
 .subscribe-grp {
   display: flex !important;
   flex-direction: row !important;
