--- a/styles/modal.css
+++ b/styles/modal.css
@@ -109,3 +109,15 @@
     margin-bottom: 2rem;
   }
 }
+
+/* Hide spinner buttons for Chrome, Edge, and Safari */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Hide spinner buttons for Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
