--- a/styles/modal.css
+++ b/styles/modal.css
@@ -11,6 +11,11 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  -webkit-animation-name: animatetop;
+  -webkit-animation-duration: 0.4s;
+  animation-name: animatetop;
+  animation-duration: 0.4s;
+  padding-inline: 10%;
 }
 
 /* Modal Content */
@@ -20,12 +25,7 @@
   margin: auto;
   padding: 0;
   border: 1px solid #888;
-  width: 80%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-  -webkit-animation-name: animatetop;
-  -webkit-animation-duration: 0.4s;
-  animation-name: animatetop;
-  animation-duration: 0.4s;
 }
 
 /* Add Animation */
@@ -120,4 +120,23 @@ input[type="number"]::-webkit-outer-spin-button {
 /* Hide spinner buttons for Firefox */
 input[type="number"] {
   -moz-appearance: textfield;
+}
+
+.non-subscriber {
+  display: none;
+  background-color: white;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-inline: 2rem;
+  text-align: center;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+
+}
+.modal-content {
+  display: none;
 }
