--- a/styles/modal.css
+++ b/styles/modal.css
@@ -11,11 +11,14 @@
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+  padding-inline: 10%;
+}
+.modal-wrapper {
+  position: relative;
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
   animation-name: animatetop;
   animation-duration: 0.4s;
-  padding-inline: 10%;
 }
 
 /* Modal Content */
