--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&display=swap");
+@import url("//cdn-images.mailchimp.com/embedcode/classic-061523.css");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
+@import url("./modal.css");
 :root {
   --primary-color: #3498db;
   --secondary-color: #2ecc71;
@@ -315,25 +318,6 @@ header p {
   font-size: 24px;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
   color: orange;
-}
-
-/*======footer*1*=========*/
-footer {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding-block: 2rem;
-  background-color: black;
-  color: white;
-}
-footer p {
-  margin: 0;
-  margin-bottom: 0.5rem;
-}
-footer a {
-  color: white;
-  font-size: 18px;
 }
 
 /*========screen wider than 820px========*/
